--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "botkit",
-  "version": "0.4.6",
+  "version": "0.4.5",
   "description": "Building blocks for Building Bots",
   "main": "lib/Botkit.js",
   "dependencies": {
@@ -8,7 +8,9 @@
     "back": "^1.0.1",
     "body-parser": "^1.14.2",
     "botbuilder": "^3.2.3",
+    "botkit-middleware-apiai": "^0.1.1",
     "botkit-studio-sdk": "^1.0.0",
+    "cleverbot.io": "^1.0.4",
     "clone": "2.0.0",
     "command-line-args": "^3.0.0",
     "crypto": "0.0.3",
