--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "promise": "^7.1.1",
     "randomstring": "^1.1.5",
     "request": "^2.67.0",
+    "sanitize-html": "^1.13.0",
     "twilio": "^2.9.1",
     "ware": "^1.3.0",
     "ws": "^1.1.1"
