--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "randomstring": "^1.1.5",
     "request": "^2.67.0",
     "sanitize-html": "^1.13.0",
+    "spotify-web-api-node": "^2.3.6",
     "twilio": "^2.9.1",
     "ware": "^1.3.0",
     "ws": "^1.1.1"
